# architecture-patterns-with-python

./: .pre-commit-config.yaml  README.md  conftest.py  dev-requirements.txt  model.py  noxfile.py  orm.py  pyproject.toml  repository.py  requirements.txt  test_allocate.py  test_batches.py  test_orm.py  test_repository.py
.devcontainer/: devcontainer.json  post-create.sh
