[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "architecture-patterns-with-python"
version = "0.0.1"
description = "Architecture Patterns with Python"
dependencies = ["sqlalchemy<2"]


[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "pre-commit",
  "mypy",
  "pip-tools",
  "nox",
  "sqlalchemy-stubs",
]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
select = ["ALL"]
ignore = ["ANN001", "ANN101", "ANN204", "INP001", "D"]
unfixable = [
  # Don't remove `print` statements, just warn.
  "T201",
  "ERA001",
  "F841",
]

[tool.ruff.per-file-ignores]
"./tests/*.py" = ["S101", "PLR2004", "SLF001"]
"**test*.py" = ["S101", "PLR2004", "SLF001"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-type-checking]
strict = false

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
exclude = ['^noxfile\.py$', '^test.+\.py$']
